objects/New_Solution_Design__c.object
<CustomObject>
    <fields>
        <fullName>Nuance_Vocalizer__c</fullName>
        <label>**Nuance Vocalizer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Anna - German-Germany(de-DE)</fullName>
                </value>
                <value>
                    <fullName>Markus - German-Germany(de-DE)</fullName>
                </value>
                <value>
                    <fullName>Petra - German-Germany(de-DE)</fullName>
                </value>
                <value>
                    <fullName>Yannick - German-Germany(de-DE)</fullName>
                </value>
                <value>
                    <fullName>Melina - Greek-Greece(el-GR)</fullName>
                </value>
                <value>
                    <fullName>Nikos - Greek-Greece(el-GR)</fullName>
                </value>
                <value>
                    <fullName>Karen - English-Australia(en-AU)</fullName>
                </value>
                <value>
                    <fullName>Lee - English-Australia(en-AU)</fullName>
                </value>
                <value>
                    <fullName>Daniel - English-Great Britain(en-GB)</fullName>
                </value>
                <value>
                    <fullName>Kate - English-Great Britain(en-GB)</fullName>
                </value>
                <value>
                    <fullName>Oliver - English-Great Britain(en-GB)</fullName>
                </value>
                <value>
                    <fullName>Serena - English-Great Britain(en-GB)</fullName>
                </value>
                <value>
                    <fullName>Veena - English-India(en-IN)</fullName>
                </value>
                <value>
                    <fullName>Allison - English-United States(en-US)</fullName>
                </value>
                <value>
                    <fullName>Ava- English-United States(en-US)</fullName>
                </value>
                <value>
                    <fullName>Samantha - English-United States(en-US)</fullName>
                </value>
                <value>
                    <fullName>Susan - English-United States(en-US)</fullName>
                </value>
                <value>
                    <fullName>Tom - English-United States(en-US)</fullName>
                </value>
                <value>
                    <fullName>Tessa - English-South Africa(en-ZA)</fullName>
                </value>
                <value>
                    <fullName>Carlos - Spanish-Colombia(es-CO)</fullName>
                </value>
                <value>
                    <fullName>Soledad - Spanish-Colombia(es-CO)</fullName>
                </value>
                <value>
                    <fullName>Jorge - Spanish-Spain(es-ES)</fullName>
                </value>
                <value>
                    <fullName>Monica - Spanish-Spain(es-ES)</fullName>
                </value>
                <value>
                    <fullName>Angelica - Spanish-Mexico(es-MX)</fullName>
                </value>
                <value>
                    <fullName>Juan - Spanish-Mexico(es-MX)</fullName>
                </value>
                <value>
                    <fullName>Paulina - Spanish-Mexico(es-MX)</fullName>
                </value>
                <value>
                    <fullName>Amelie - French-Canada(fr-CA)</fullName>
                </value>
                <value>
                    <fullName>Chantal - French-Canada(fr-CA)</fullName>
                </value>
                <value>
                    <fullName>Nicolas - French-Canada(fr-CA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Business_Units_to_Configure__c</fullName>
        <label>Number of Business Units to Configure –</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Genesys_provided_Inbound_phone__c</fullName>
        <label>Number of Genesys provided Inbound phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Genesys_provided_agent_dial_in__c</fullName>
        <label>Number of Genesys provided agent dial-in</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_High_Complexity_Call_Flows__c</fullName>
        <label>Number of High Complexity Call Flows</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Low_Complexity_Call_Flows__c</fullName>
        <label>Number of Low Complexity Call Flows</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Medium_Complexity_Call_Flows__c</fullName>
        <label>Number of Medium Complexity Call Flows</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_OB_calls_avg_day__c</fullName>
        <label>Number of OB calls avg/day</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_OB_calls_avg_hour__c</fullName>
        <label>Number of OB calls avg/hour</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_OB_calls_max_hour__c</fullName>
        <label>Number of OB calls max/hour</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_OB_calls_max_per_min_per_hour__c</fullName>
        <label>Number of OB calls max (per min/per hour</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Outbound_Agents__c</fullName>
        <label>Number of Outbound Agents</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Outbound_Basic_Treatments__c</fullName>
        <label>Number of Outbound Basic Treatments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Outbound_Campaigns__c</fullName>
        <label>Number of Outbound Campaigns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Outbound_Lists_automatically_l__c</fullName>
        <label>Number of Outbound Lists automatically l</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_SMS_max_per_hour__c</fullName>
        <label>Number of SMS – max per hour</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_SMS_max_per_min__c</fullName>
        <label>Number of SMS – max (per min)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_custom_agent_scripts__c</fullName>
        <label>Number of custom agent scripts</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <formula>DSR_SCE_Design__r.OfferingPlatformType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunitylookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunitylookup</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>New_Solution_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outbound_Agents__c</fullName>
        <label># Outbound Agents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Development_Action_Date__c</fullName>
        <label>Outbound Development Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outbound_Development_Actor__c</fullName>
        <label>Outbound Development Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outbound Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outbound_Operations_Action_Date__c</fullName>
        <label>Outbound Operations Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outbound_Operations_Actor__c</fullName>
        <label>Outbound Operations Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Product_Management_Action_Date__c</fullName>
        <label>Outbound Product Management Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outbound_Product_Management_Actor__c</fullName>
        <label>Outbound Product Management Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Professional_Services_Action_Da__c</fullName>
        <label>Outbound PS Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outbound_Professional_Services_Actor__c</fullName>
        <label>Outbound PS Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCI_Environment__c</fullName>
        <label>**PCI Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PCI Premise Required</fullName>
                </value>
                <value>
                    <fullName>Not PCI (No PCI data will be handled by this solution)</fullName>
                </value>
                <value>
                    <fullName>PCI, collecting CC data via IVR/DTMF (Secure Input)</fullName>
                </value>
                <value>
                    <fullName>PCI, collecting CC data via agent voice (Secure Pause)</fullName>
                </value>
                <value>
                    <fullName>PCI, collecting CC data via IVR/DTMF and agent voice</fullName>
                </value>
                <value>
                    <fullName>Secure Zone - PHI, but no PCI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PEC_Development_Action_Date__c</fullName>
        <label>PEC Development Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEC_Development_Actor__c</fullName>
        <label>PEC Development Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEC_Operations_Action_Date__c</fullName>
        <label>PEC Operations Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEC_Operations_Actor__c</fullName>
        <label>PEC Operations Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEC_Outbound_Architecture_Action_Date__c</fullName>
        <label>PEC Outbound Architecture Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEC_Outbound_Architecture_Actor__c</fullName>
        <label>PEC Outbound Architecture Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEC_Outbound_Customer_Care_Action_Date__c</fullName>
        <label>PEC Outbound Customer Care Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEC_Outbound_Customer_Care_Actor__c</fullName>
        <label>PEC Outbound Customer Care Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEC_PSM_EMEA_Date__c</fullName>
        <label>PEC PSManagement EMEA Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEC_Product_Management_Action_Date__c</fullName>
        <label>PEC Product Management Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEC_Product_Management_Actor__c</fullName>
        <label>PEC Product Management Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEC_Professional_ServicesManagement_EMEA__c</fullName>
        <label>PEC PSManagement EMEA Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEC_Professional_Services_Tech_Date__c</fullName>
        <label>PEC PS - Technical Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEC_Professional_Services_Technical_Ac__c</fullName>
        <label>PEC PS - Technical Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pain_Points__c</fullName>
        <label>Pain Points</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Saving__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Partial Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase_2_Go_Live__c</fullName>
        <label>Phase 2 – Go Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_3_Go_Live__c</fullName>
        <label>Phase 3 – Go Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Problem_Statement__c</fullName>
        <label>Problem Statement</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>**Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud - Custom</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud – Enterprise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud - IO</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud - Preferred</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud - Premium</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud - Standard</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                    <label>SDO PureCloud</label>
                </value>
                <value>
                    <fullName>SDO PureConnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Services_PCC_Action_Date__c</fullName>
        <label>PS PCC Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Professional_Services_PCC_Actor__c</fullName>
        <label>PS PCC Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_of_Inter_Region_MPLS_for_Voice__c</fullName>
        <label>Provider of Inter-Region MPLS for Voice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PureConnect_Cloud_Capabilities_Phase_1__c</fullName>
        <label>PureConnect Cloud Capabilities - Phase 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core ACD &amp; Multi-Media</fullName>
                </value>
                <value>
                    <fullName>Development Environment</fullName>
                </value>
                <value>
                    <fullName>e-FAQ</fullName>
                </value>
                <value>
                    <fullName>Inbound Fax Processing</fullName>
                </value>
                <value>
                    <fullName>Interaction Analyzer</fullName>
                </value>
                <value>
                    <fullName>Interaction Attendant (IVR)</fullName>
                </value>
                <value>
                    <fullName>Interaction Collector</fullName>
                </value>
                <value>
                    <fullName>Interaction Conference</fullName>
                </value>
                <value>
                    <fullName>Interaction Content Manager</fullName>
                </value>
                <value>
                    <fullName>Interaction Decision</fullName>
                </value>
                <value>
                    <fullName>Interaction Dialer</fullName>
                </value>
                <value>
                    <fullName>Interaction Director</fullName>
                </value>
                <value>
                    <fullName>Interaction Easy Scripter</fullName>
                </value>
                <value>
                    <fullName>Interaction Feedback</fullName>
                </value>
                <value>
                    <fullName>Interaction Marquee</fullName>
                </value>
                <value>
                    <fullName>Interaction Media Streaming Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Migrator</fullName>
                </value>
                <value>
                    <fullName>Interaction  Mobile Office</fullName>
                </value>
                <value>
                    <fullName>Interaction Mobilizer</fullName>
                </value>
                <value>
                    <fullName>Interaction Monitor</fullName>
                </value>
                <value>
                    <fullName>Interaction Optimizer</fullName>
                </value>
                <value>
                    <fullName>Interaction Process Automation</fullName>
                </value>
                <value>
                    <fullName>Interaction Quality Manager</fullName>
                </value>
                <value>
                    <fullName>Interaction Recorder</fullName>
                </value>
                <value>
                    <fullName>Interaction SIP Proxy</fullName>
                </value>
                <value>
                    <fullName>Interaction Supervisor</fullName>
                </value>
                <value>
                    <fullName>Interaction Tracker</fullName>
                </value>
                <value>
                    <fullName>Interaction Update</fullName>
                </value>
                <value>
                    <fullName>Interaction Web Portal</fullName>
                </value>
                <value>
                    <fullName>IP PBX / Unified Communications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PureConnect_Cloud_Capabilities_Phase_2__c</fullName>
        <label>PureConnect Cloud Capabilities - Phase 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core ACD &amp; Multi-Media</fullName>
                </value>
                <value>
                    <fullName>Development Environment</fullName>
                </value>
                <value>
                    <fullName>e-FAQ</fullName>
                </value>
                <value>
                    <fullName>Inbound Fax Processing</fullName>
                </value>
                <value>
                    <fullName>Interaction Analyzer</fullName>
                </value>
                <value>
                    <fullName>Interaction Attendant (IVR)</fullName>
                </value>
                <value>
                    <fullName>Interaction Collector</fullName>
                </value>
                <value>
                    <fullName>Interaction Conference</fullName>
                </value>
                <value>
                    <fullName>Interaction Content Manager</fullName>
                </value>
                <value>
                    <fullName>Interaction Decision</fullName>
                </value>
                <value>
                    <fullName>Interaction Dialer</fullName>
                </value>
                <value>
                    <fullName>Interaction Director</fullName>
                </value>
                <value>
                    <fullName>Interaction Easy Scripter</fullName>
                </value>
                <value>
                    <fullName>Interaction Feedback</fullName>
                </value>
                <value>
                    <fullName>Interaction Marquee</fullName>
                </value>
                <value>
                    <fullName>Interaction Media Streaming Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Migrator</fullName>
                </value>
                <value>
                    <fullName>Interaction  Mobile Office</fullName>
                </value>
                <value>
                    <fullName>Interaction Mobilizer</fullName>
                </value>
                <value>
                    <fullName>Interaction Monitor</fullName>
                </value>
                <value>
                    <fullName>Interaction Optimizer</fullName>
                </value>
                <value>
                    <fullName>Interaction Process Automation</fullName>
                </value>
                <value>
                    <fullName>Interaction Quality Manager</fullName>
                </value>
                <value>
                    <fullName>Interaction Recorder</fullName>
                </value>
                <value>
                    <fullName>Interaction SIP Proxy</fullName>
                </value>
                <value>
                    <fullName>Interaction Supervisor</fullName>
                </value>
                <value>
                    <fullName>Interaction Tracker</fullName>
                </value>
                <value>
                    <fullName>Interaction Update</fullName>
                </value>
                <value>
                    <fullName>Interaction Web Portal</fullName>
                </value>
                <value>
                    <fullName>IP PBX / Unified Communications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PureConnect_Cloud_Capabilities_Phase_3__c</fullName>
        <label>PureConnect Cloud Capabilities - Phase 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core ACD &amp; Multi-Media</fullName>
                </value>
                <value>
                    <fullName>Development Environment</fullName>
                </value>
                <value>
                    <fullName>e-FAQ</fullName>
                </value>
                <value>
                    <fullName>Inbound Fax Processing</fullName>
                </value>
                <value>
                    <fullName>Interaction Analyzer</fullName>
                </value>
                <value>
                    <fullName>Interaction Attendant (IVR)</fullName>
                </value>
                <value>
                    <fullName>Interaction Collector</fullName>
                </value>
                <value>
                    <fullName>Interaction Conference</fullName>
                </value>
                <value>
                    <fullName>Interaction Content Manager</fullName>
                </value>
                <value>
                    <fullName>Interaction Decision</fullName>
                </value>
                <value>
                    <fullName>Interaction Dialer</fullName>
                </value>
                <value>
                    <fullName>Interaction Director</fullName>
                </value>
                <value>
                    <fullName>Interaction Easy Scripter</fullName>
                </value>
                <value>
                    <fullName>Interaction Feedback</fullName>
                </value>
                <value>
                    <fullName>Interaction Marquee</fullName>
                </value>
                <value>
                    <fullName>Interaction Media Streaming Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Migrator</fullName>
                </value>
                <value>
                    <fullName>Interaction  Mobile Office</fullName>
                </value>
                <value>
                    <fullName>Interaction Mobilizer</fullName>
                </value>
                <value>
                    <fullName>Interaction Monitor</fullName>
                </value>
                <value>
                    <fullName>Interaction Optimizer</fullName>
                </value>
                <value>
                    <fullName>Interaction Process Automation</fullName>
                </value>
                <value>
                    <fullName>Interaction Quality Manager</fullName>
                </value>
                <value>
                    <fullName>Interaction Recorder</fullName>
                </value>
                <value>
                    <fullName>Interaction SIP Proxy</fullName>
                </value>
                <value>
                    <fullName>Interaction Supervisor</fullName>
                </value>
                <value>
                    <fullName>Interaction Tracker</fullName>
                </value>
                <value>
                    <fullName>Interaction Update</fullName>
                </value>
                <value>
                    <fullName>Interaction Web Portal</fullName>
                </value>
                <value>
                    <fullName>IP PBX / Unified Communications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PureConnect_Cloud_Region__c</fullName>
        <label>PureConnect Cloud Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>N / A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PureEngage_Cloud_Capabilities_Phase_11__c</fullName>
        <label>PureEngage Cloud Capabilities - Phase 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SOW-301 Outbound-Predictive</fullName>
                </value>
                <value>
                    <fullName>SOW-302 Outbound-Manual (Workspace Web)</fullName>
                </value>
                <value>
                    <fullName>SOW-303 Outbound-Preview</fullName>
                </value>
                <value>
                    <fullName>SOW-304 Agent Scripting</fullName>
                </value>
                <value>
                    <fullName>SOW-305 Outbound IVR w/Genesys Voice Talent</fullName>
                </value>
                <value>
                    <fullName>SOW-306 Inbound IVR w/Genesys Voice Talent</fullName>
                </value>
                <value>
                    <fullName>SOW-307 Voice IVR  SmartSounds</fullName>
                </value>
                <value>
                    <fullName>SOW-308 Inbound Skills Based Voice Routing</fullName>
                </value>
                <value>
                    <fullName>SOW-309 SIP Registrar (soft phone)</fullName>
                </value>
                <value>
                    <fullName>SOW-310 Call Recording</fullName>
                </value>
                <value>
                    <fullName>SOW-311 Local Touch</fullName>
                </value>
                <value>
                    <fullName>SOW-312 Email Channel</fullName>
                </value>
                <value>
                    <fullName>SOW-313 Email domain provisioning</fullName>
                </value>
                <value>
                    <fullName>SOW-314 Short Message Service (SMS)</fullName>
                </value>
                <value>
                    <fullName>SOW-315 MMS</fullName>
                </value>
                <value>
                    <fullName>SOW-316 Short Codes, Long codes</fullName>
                </value>
                <value>
                    <fullName>SOW-318 Web Channel and Mobile pages</fullName>
                </value>
                <value>
                    <fullName>SOW-319 Nanoclick</fullName>
                </value>
                <value>
                    <fullName>SOW-322 Compliance Rules</fullName>
                </value>
                <value>
                    <fullName>SOW-323 Secured Enterprise</fullName>
                </value>
                <value>
                    <fullName>SOW-324 Automated call data import/List Import (FTP)</fullName>
                </value>
                <value>
                    <fullName>SOW-325 List Builder</fullName>
                </value>
                <value>
                    <fullName>SOW-326 Automated result file export (FTP)</fullName>
                </value>
                <value>
                    <fullName>SOW-328 OnDemand (Tricklefeed)</fullName>
                </value>
                <value>
                    <fullName>SOW-330 Standard Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>